update entrypoint scripts